src/test/ui/rfc-2632-const-trait-impl/impl-tilde-const-trait.stderr
error: expected a trait, found type
  --> $DIR/impl-tilde-const-trait.rs:6:6
   |
LL | impl ~const T for S {}
   |      ^^^^^^^^

error: aborting due to previous error

